--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,21 +8,21 @@ on:
     branches: [ main ]
 
 jobs:
-  dependency-check:
+  build:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
 
       - name: Build project
-        run: mvn clean install -B
+        run: mvn clean install -B -DskipTests
 
       - name: Run OWASP Dependency-Check
         run: mvn org.owasp:dependency-check-maven:check
